--- a/.editorconfig
+++ b/.editorconfig
@@ -7,12 +7,14 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
 indent_size = 2
+
 
 [docker-compose.yml]
 indent_size = 4
