Frontend Setup part-1

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /public/hot
 /public/storage
 /public/backend/assets/modules
+/public/frontend/images
+/public/frontend/js
 /public/backend/assets/img/news
 /public/backend/assets/img/products
 /storage/*.key
